# UXPLinda

./: CMakeLists.txt  README.md  main.cpp  makefile  manyClients.sh  segFault.sh  standardTest.sh  tests.sh  thousandsOfRequest.sh  timeoutTest.sh
clients/: ask10sForInt.cpp  askFor6ManyTimes.cpp  client.cpp  client2.cpp  create5.cpp  createIntAfter2s.cpp  createRandomInts.cpp  createString.cpp  inputOutput.cpp  interactive.cpp  onlyReading.cpp  output-input.cpp  shortTimeouts.cpp  timeoutAndInput.cpp
src/client/: CMakeLists.txt  Client.cpp  Client.h
src/server/: CMDParser.cpp  CMDParser.h  CMakeLists.txt  Request.cpp  Request.h  Server.cpp  Server.h
src/tuple/: CMakeLists.txt  Pattern.cpp  Pattern.h  Tuple.cpp  Tuple.h  TupleSpace.cpp  TupleSpace.h
tests/: main_tests.cpp
tests/client/: clientTests.cpp
tests/tuple/: PatternTests.cpp  tupleSpaceTests.cpp
